make form changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script defer src="{{ url_for('static', filename='script.js') }}"></script>
   </head>
   <body class="App">
-    <form action="/data" method="post">
+    <form>
       <input type="text" value="12" name="B" />
       <input
         type="button"
