--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,12 @@
   </head>
   <body class="App">
     <form>
-      <input type="text" value="12" name="B" />
+      <input
+        type="text"
+        value="12"
+        placeholder="Enter Battery Voltage"
+        name="B"
+      />
       <input
         type="button"
         value="Add Series Resistor"
