delete old unused files + small changes

--- a/static/main.css
+++ b/static/main.css
@@ -9,7 +9,7 @@ body {
 
 table, th, td {
     border: 1px solid;
-
+    border-color: rgb(136, 136, 136);
 }
 
 table {
@@ -20,6 +20,7 @@ table {
 
 th, td {
     padding: 7px;
+    text-align: center;
 }
 
 .App {
