--- a/static/main.css
+++ b/static/main.css
@@ -23,6 +23,12 @@ th, td {
     text-align: center;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .App {
     background-color: #282c34;
     min-height: 100vh;
