--- a/templates/test.jinja
+++ b/templates/test.jinja
@@ -41,7 +41,7 @@
       </tr>
       {% endfor %}
     </table>
-    <input type="button" value="Export to JSON" />
+    <input id="export-json-btn" type="button" value="Export to JSON" />
     <div class="json-container"></div>
   </body>
 </html>
