--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -33,7 +33,9 @@
               type="number"
               step="any"
               value="12"
+              placeholder="V"
               id="voltage-field"
+              autocomplete="off"
               required
             />
           </li>
@@ -44,6 +46,9 @@
         <input type="reset" value="Clear" />
         <input type="submit" value="Submit" />
       </div>
+    </form>
+    <form action="/example" target="_blank" method="get">
+      <input type="submit" value="See Example" />
     </form>
   </body>
 </html>
