--- a/static/main.css
+++ b/static/main.css
@@ -140,9 +140,10 @@ input[type="submit"] {
   margin: 5px;
   padding: 10px;
   display: flex;
+  justify-content: center;
   column-gap: 10px;
 }
 
-#export-json-btn {
-  margin-bottom: 25px;
+#voltage-field {
+  border: 3px solid red;
 }
